--- a/biostatistics.html
+++ b/biostatistics.html
@@ -74,7 +74,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698585648-associate-director-biostatistics'>Biogen Associate Director, Biostatistics | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
@@ -89,7 +89,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/recruiter-1130798/jobs/science-biotech/remote-principal-sr-principal-biostatistician-durham-nc-2710/83975'>
+<h5><a href='https://postings.com/recruiter-1130798/jobs/science-biotech/remote-principal-sr-principal-biostatistician-durham-nc-2710/83975'>
 Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori Steiner
 </a></h5> 
 <p><span class="badge badge-light">Durham, NC</span></p>
@@ -163,7 +163,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/senior-biostatistician-home-or-office-based-eu-31242'>Senior Biostatistician - Home or Office based EU - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/senior-biostatistician-home-or-office-based-eu-31242'>Senior Biostatistician - Home or Office based EU - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Barcelona Italy</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -171,7 +171,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-03</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -213,7 +213,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chroniclevitae.com/jobs/0000504302-01'>
+<h5><a href='https://chroniclevitae.com/jobs/0000504302-01'>
 	Chair and Full Professor - Department of Epidemiology/Biostatistics | ChronicleVitae
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -257,7 +257,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -273,7 +273,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -285,11 +285,11 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -355,7 +355,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oBrAafww&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=naQ8sLwQ'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oBrAafww&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=naQ8sLwQ'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
@@ -363,7 +363,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oZUo9fwa&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nyTusLwD'>Premier Research Careers - Manager, Biostatistics (US Based)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oZUo9fwa&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nyTusLwD'>Premier Research Careers - Manager, Biostatistics (US Based)</a></h5> 
 <p><span class="badge badge-light">North Carolina  Boston, Massachusetts  Chicago, Illinois  Denver Phoenix, Arizona  San Diego, California  San Francisco, California  Seattle, Washington  Salt Lake City, Utah  Austin, Texas  Naperville, Illinois  Baltimore, Maryland  Nashville, Tennessee</span></p>
 <p>Posted on:: 2019-08-30</p>
 <hr/>
@@ -408,7 +408,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-08-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/portola/job/o4aRafwZ'>Portola Pharmaceuticals Careers - Director, Biostatistics, Cardiovascular Programs</a></h5> 
+<h5><a href='https://jobs.jobvite.com/portola/job/o4aRafwZ'>Portola Pharmaceuticals Careers - Director, Biostatistics, Cardiovascular Programs</a></h5> 
 <p><span class="badge badge-light">South San Francisco, California</span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
@@ -429,7 +429,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p>Aug 8, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
 <hr/>
-<h5><a href='https://glpg.recruitee.com/o/biostatistics-leader-be-nl-fr-or-ch'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/biostatistics-leader-be-nl-fr-or-ch'>
       Biostatistics Leader -  BE, NL, FR or CH - Galapagos
     </a></h5> 
 <p><span class="badge badge-light">France</span></p>
@@ -471,7 +471,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-jax.icims.com/jobs/27009/biostatistician-ii/job'>Biostatistician II in Farmington, Connecticut | Careers at FACT ...</a></h5> 
+<h5><a href='https://careers-jax.icims.com/jobs/27009/biostatistician-ii/job'>Biostatistician II in Farmington, Connecticut | Careers at FACT ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 21, 2019 ... JAX was voted among the top 15 ?Best Places to Work in Academia? in the United 
 States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...</p>
@@ -500,7 +500,7 @@ States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-01</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
